# wave-experiment

./: .gitignore  CLAUDE.md  DOCUMENT_STREAM_WIRING.md  INTEGRATION_SUMMARY.md  README.md  bootstrap.py  extract_pdf_documents.py  humanity.md  pyproject.toml  run_warmup.py  test_filtering_analysis.py  test_welfare_integration.py
checkpoints/dpo/: README.md  adapter_config.json
data/training/: constitutional_pairs.jsonl  legal_pairs.jsonl  welfare_training_data.jsonl  welfare_training_split_train.jsonl  welfare_training_split_val.jsonl
deployment/: .env.example  detective-api.service  requirements-azure.txt  requirements-deploy.txt  setup.sh  vllm_start.sh
docs/: constitution.md  humanity-analysis.md  humanity-phi-formalized.md  phi-integration-guide.md  welfare-scoring-test-results.md
docs/plans/: 2026-02-16-research-synthesis-design.md  2026-02-16-synthesized-implementation.md  2026-02-18-gap-completion-constitutional-training.md  2026-02-19-humanity-phi-implementation-plan.md  2026-02-19-humanity-phi-integration.md  2026-02-19-semantic-welfare-scoring-design.md  2026-02-19-semantic-welfare-scoring-implementation.md  2026-02-20-phi-formula-revision-design.md  2026-02-25-legal-written-vs-applied-training.md  2026-02-25-phi-forecasting-implementation.md  2026-02-25-phi-forecasting-integration-design.md  2026-02-26-bridge-detective-forecaster-design.md  2026-02-26-bridge-detective-forecaster-implementation.md  2026-02-26-phi-research-workbench-design.md  2026-02-26-phi-research-workbench-implementation.md  2026-02-27-legal-training-foia-evidence-implementation.md  2026-02-27-legal-training-foia-evidence-pipeline.md  2026-03-03-critical-fixes-docs-hf-acceleration.md  2026-03-05-full-audit-remediation.md
docs/vault/: README.md
evaluation/: __init__.py  independent_discovery.py
notebooks/: dpo_training_colab.ipynb
scripts/: create_welfare_training_data.py  run_warmup.py  train_dpo_hf_job.py  train_phi_forecaster.py  train_phi_hf_job.py  train_welfare_classifier.py  train_welfare_classifier_hf_job.py  verify_humanity_phi.py
spaces/maninagarden/: README.md  app.py  graph_analytics.py  graph_client.py  graph_features.py  model.py  requirements.txt  scenarios.py  training.py  welfare.py
src/api/: routes.py
src/cli/: main.py
src/core/: graph.py  log.py  model.py  providers.py  reasoning_trace.py  scoring.py  trace_store.py  types.py
src/data/: __init__.py  annotation_filter.py  dedup.py  entity_filter.py  epstein_adapter.py  graph_store.py  ingest_epstein.py  knowledge_graph.py  kuzu_graph.py  ner.py
src/detective/: constitution.py  evolution.py  experience.py  hypothesis.py  legal_gap_detector.py  module_a.py  module_b.py  module_c.py  parallel_evolution.py  person_auditor.py
src/evaluation/: independent_discovery.py
src/forecasting/: __init__.py  backbone.py  construct_forecast.py  engine.py  gap_prediction.py  model.py  (+5 more)
tests/: conftest.py  test_end_to_end.py  test_hypothesis.py
(+160 files in other folders)
