[project]
name = "detective-llm"
version = "0.1.0"
description = "Detective LLM: Information Gap Analysis for Geopolitical Influence Networks"
requires-python = ">=3.12"
dependencies = [
    "torch>=2.2.0,<3.0",
    "transformers>=4.40.0,<5.0",
    "networkx>=3.0,<4.0",
    "pydantic>=2.0,<3.0",
    "fastapi>=0.100.0,<1.0",
    "uvicorn>=0.23.0,<1.0",
    "click>=8.1.0,<9.0",
    # RL training + alignment
    "trl>=0.8.0,<1.0",
    "peft>=0.10.0,<1.0",
    # Graph neural network layer
    "torch-geometric>=2.5.0,<3.0",
    # Local inference client (vLLM exposes OpenAI-compatible API)
    "openai>=1.0.0,<2.0",
    # Obsidian Local REST API client (optional integration)
    "httpx>=0.27.0,<1.0",
    # Numeric / data (imported directly in forecasting + inference)
    "numpy>=1.26.0,<3.0",
    "pandas>=2.1.0,<3.0",
    "scikit-learn>=1.3.0,<2.0",
    "tqdm>=4.66.0,<5.0",
    # .env file loading for CLI
    "python-dotenv>=1.0.0,<2.0",
    # HuggingFace datasets (hf_loader, legal_sources, training)
    "datasets>=2.18.0,<3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.4.0",
    "ruff>=0.0.280",
    "jupyter>=1.0.0",
]
scraping = [
    "scrapling>=0.3.0",
    "pdf2image>=1.16.0",
    "pytesseract>=0.3.10",
]
ner = [
    "spacy>=3.7.0",
]
dedup = [
    "datasketch>=1.6.0",
]
graph = [
    "kuzu>=0.11.0",
]
all = [
    "detective-llm[dev,scraping,ner,dedup,graph]",
]

[project.scripts]
detective = "src.cli.main:cli"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
